fixed forum card spacing

--- a/app/assets/stylesheets/components/_forum_card.scss
+++ b/app/assets/stylesheets/components/_forum_card.scss
@@ -4,6 +4,7 @@
   width: 100%;
   height: auto;
   background-color: $background-color;
+  margin-bottom: 20px;
 
   .question {
     border: 1px solid black;
